--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
                         <div id="text-banner1">
                             <h1>Veni a conocer</h1>
                             <h2>la experiencia</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, id assumenda. Incidunt iusto voluptatibus.</p>
+                            <p>Disfruta del tenis con los mejores profesores, y un entorno repleto de natrualeza.</p>
                         </div>
                         <a href="./registro.html" class="agendar-visita"> <b>Agendar Visita</b></a>
                 </section>
